tests/negative/lexer/hex_digit.orng
// hex_digit.orng:6:8: error: 'X' is not a valid hexadecimal digit
//     0xXYZ
//       ^
// 
fn main() -> Int {
    0xXYZ
}